[PE] Use infinite cull rect under perspective

Transform with perspective mapping sometimes doesn't work for cull rect.
See the bug for details.

Bug: 887558
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I4d2c086f957454c6cb90a8c679e7dc5b37b95c3f
Reviewed-on: https://chromium-review.googlesource.com/1236660
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593077}
Former-commit-id: e6061d56dacfbb96aa073405f515e8df9ddc4a1f